16_subseq/grade.txt
Grading at Fri May  8 19:55:37 UTC 2020
Attempting to compile maxSeq.c 
maxSeq.c: In function ‘maxSeq’:
maxSeq.c:10:10: error: variable ‘temp’ set but not used [-Werror=unused-but-set-variable]
   size_t temp;
          ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
